--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 <p><img src='depthcol.jpeg'></p>
 
 <ul>
-<li>Assume there is a 5 by 5 kernel with a bias term and there are 11 such kernels in this layer, the how many parameters will be needed? Compare with a vaniall MLP?</li>
+<li>Assume there is a 5 by 5 kernel with a bias term and there are 11 such kernels in this layer, the how many parameters will be needed? Compare with a vanilla MLP?</li>
 </ul>
 
   </article>
