--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ model.Add(Activation(&#39;softmax&#39;))
 
 #Instantiate an optimizer
 sgd=SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)
-model.compile(loss=&#39;categorica_crossentropy&#39;,optimiser=sgd,metrics=[&#39;accuracy&#39;])
+model.compile(loss=&#39;categorical_crossentropy&#39;,optimiser=sgd,metrics=[&#39;accuracy&#39;])
 
 # Fit the model
 model.fit(X,y,batch_size=n,epochs=m)
