excel iframe added

--- a/index.html
+++ b/index.html
@@ -145,6 +145,17 @@
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
+    <h2>Basic Concepts:</h2>
+  </hgroup>
+  <article data-timings="">
+    <iframe src="https://onedrive.live.com/embed?cid=93C4DDFD9869A0CF&resid=93C4DDFD9869A0CF%21204&authkey=ACeZ2LCmVx_Q7WA&em=2" width="402" height="346" frameborder="0" scrolling="no"></iframe>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="class" id="id" style="background:;">
+  <hgroup>
     <h2>Gradient Descent: Optimising a convex function</h2>
   </hgroup>
   <article data-timings="">
@@ -547,7 +558,7 @@ model.fit(X,y,batch_size=n,epochs=m)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=6 title='Gradient Descent: Optimising a convex function'>
+        data-slide=6 title='Basic Concepts:'>
          6
       </a>
     </li>
@@ -559,25 +570,25 @@ model.fit(X,y,batch_size=n,epochs=m)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=8 title='Backpropagation:'>
+        data-slide=8 title='Gradient Descent: Optimising a convex function'>
          8
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=9 title='Convolutional Neural Networks'>
+        data-slide=9 title='Backpropagation:'>
          9
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=10 title='Convolutional Neural  Networks'>
+        data-slide=10 title='Convolutional Neural Networks'>
          10
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=11 title='Convolutional Neural Networks'>
+        data-slide=11 title='Convolutional Neural  Networks'>
          11
       </a>
     </li>
@@ -631,25 +642,25 @@ model.fit(X,y,batch_size=n,epochs=m)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=20 title='Convolutional Neural Networks: Transfer Learning'>
+        data-slide=20 title='Convolutional Neural Networks'>
          20
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=21 title='Keras: Coding the networks'>
+        data-slide=21 title='Convolutional Neural Networks: Transfer Learning'>
          21
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=22 title='Keras : API overview'>
+        data-slide=22 title='Keras: Coding the networks'>
          22
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=23 title='Keras: Basic API Sample'>
+        data-slide=23 title='Keras : API overview'>
          23
       </a>
     </li>
@@ -657,6 +668,12 @@ model.fit(X,y,batch_size=n,epochs=m)
       <a href="#" target="_self" rel='tooltip' 
         data-slide=24 title='Keras: Basic API Sample'>
          24
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=25 title='Keras: Basic API Sample'>
+         25
       </a>
     </li>
   </ul>
