--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <h2>Basic Concepts:</h2>
   </hgroup>
   <article data-timings="">
-    <iframe src="https://onedrive.live.com/embed?cid=93C4DDFD9869A0CF&resid=93C4DDFD9869A0CF%21204&authkey=ACeZ2LCmVx_Q7WA&em=2" width="402" height="346" frameborder="0" scrolling="no"></iframe>
+    <iframe width="402" height="346" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?cid=93C4DDFD9869A0CF&resid=93C4DDFD9869A0CF%21204&authkey=ACeZ2LCmVx_Q7WA&em=2&AllowTyping=True&wdHideGridlines=True&wdHideHeaders=True"></iframe>
 
   </article>
   <!-- Presenter Notes -->
